fixed the mobile view showing extra white space

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap');
 
 #root {
+  min-height: 100vh;
   background-color: #3a4663;
   font-family: 'League Spartan', sans-serif;
 }
