--- a/src/styles/base/_globals.scss
+++ b/src/styles/base/_globals.scss
@@ -16,11 +16,10 @@
 }
 
 body {
-  height: 100%;
+  min-height: 100vh;
 }
 
 #root {
-  height: 100%;
   display: flex;
   @extend %flex-row-center;
 }
